--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p>Hong Kong's family office landscape began informally in the pre-2010s era, leveraging its status as an international financial center. Wealthy families from Mainland China and Southeast Asia used private banks and offshore structures for wealth preservation, attracted by unrestricted capital flows and the common law system—unique in China. However, without dedicated policies, operations remained fragmented, often routed through Singapore or traditional banking channels.</p>
                     </div>
                     <div class="language-panel chinese-panel full-width" data-lang="中文" id="evolution-intro-zh">
-                        <p>家族办公室的起源可追溯至19世纪的欧洲。1838年，洛克菲勒家族成立了首个正式的单一家族办公室，用于管理其日益壮大的石油财富。到20世纪80年代，美国金融监管放宽推动行业快速发展，数千家办公室开始专注于投资管理、慈善事业及财富传承。目前，全球约有7,000至10,000个家族办公室，管理资产规模约达5.9万亿美元。亚洲市场因财富快速积累而蓬勃发展——特别是在中国，316万高净值人士推动可投资资产以每年10%的速度增长。</p>
+                        <p>家族办公室的起源可追溯至19世纪的欧洲。1838年，洛克菲勒家族成立了首个正式的单一家族办公室，用于管理其日益壮大的石油财富。到20世纪80年代，美国金融监管放宽推动行业快速发展，数千家办公室开始专注于投资管理、慈善事业及财富传承。目前，全球约有7000至10,000个家族办公室，管理资产规模约达5.9万亿美元。亚洲市场因财富快速积累而蓬勃发展——特别是在中国，316万高净值人士推动可投资资产以每年10%的速度增长。</p>
                         <p>香港的家族办公室生态在2010年前处于初步形成阶段，依托其国际金融中心的优势。来自中国大陆及东南亚的富裕家族通过私人银行和离岸架构进行财富管理，看重资本自由流动及香港作为中国境内唯一普通法体系的独特地位。当时由于缺乏针对性政策，市场运作较为分散，部分业务通过新加坡或传统银行渠道进行。</p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                                 <p>The Hong Kong Family Office Nexus launched in October 2024 with Bloomberg and FSTB, featuring a digital knowledge hub (4,000+ views) and The Family Office Playbook (October 2025 release)—a comprehensive guide on regulatory navigation, asset strategies, succession, and operations. The 2025-26 Budget expands tax exemptions to carbon credits, digital assets, and carried interest, targeting 220 more offices by 2028. Greater Bay Area integration enables seamless RMB flows, while green finance and ESG initiatives align with global trends (92% Chinese HNWI in collectibles). With 2,700+ SFOs projected to reach 3,000+, Hong Kong aims to surpass Switzerland as the world's top cross-border wealth center by 2027, managing HK$35T+ AUM.</p>
                             </div>
                             <div class="language-panel chinese-panel clean" data-lang="中文" id="timeline-content-4-zh" style="padding: 1rem;">
-                                <p>香港家办汇于2024年10月与彭博及财经事务及库务局合作推出，设有数字知识中心（浏览量超过4,000次）及《家族办公室指南》（预计2025年10月发布）——该指南全面涵盖监管导航、资产策略、传承规划及运营管理。2025-26年度财政预算案将税务豁免范围扩大至碳排放权、数字资产及附带权益，目标是在2028年前吸引220间新办公室。大湾区一体化实现了人民币的无缝流动，绿色金融及ESG倡议与全球趋势相契合（92%的中国高净值人士持有收藏品）。预计单一家族办公室数量将从2,700间增至3,000间，香港目标在2027年前超越瑞士，成为全球顶尖的跨境财富中心，管理超过35万亿港元的资产管理规模。</p>
+                                <p>香港家办汇于2024年10月与彭博及财经事务及库务局合作推出，设有数字知识中心（浏览量超过4000次）及《家族办公室指南》（预计2025年10月发布）——该指南全面涵盖监管导航、资产策略、传承规划及运营管理。2025-26年度财政预算案将税务豁免范围扩大至碳排放权、数字资产及附带权益，目标是在2028年前吸引220间新办公室。大湾区一体化实现了人民币的无缝流动，绿色金融及ESG倡议与全球趋势相契合（92%的中国高净值人士持有收藏品）。预计单一家族办公室数量将从2700间增至3000间，香港目标在2027年前超越瑞士，成为全球顶尖的跨境财富中心，管理超过35万亿港元的资产管理规模。</p>
                             </div>
                         </div>
                     </div>
@@ -233,8 +233,8 @@
                     <p id="sec2-para-2">MFOs pool resources for multiple unrelated families, reducing costs through shared expertise and networks—ideal for emerging UHNWIs with combined AUM often exceeding US$20 million. This model fosters cross-industry collaboration and access to institutional-grade opportunities but may limit personalization. In Hong Kong, MFOs can leverage the unified fund exemption if SFC-licensed, benefiting from streamlined high-net-worth investor assessments. Both types thrive in HK's ecosystem, with 2,700+ SFOs (over half managing US$50M+) and growing MFO presence amid 12,615 local UHNWIs.</p>
                 </div>
                 <div class="language-panel chinese-panel clean" data-lang="中文">
-                    <p id="sec2-para-1">家族办公室主要分为单一家族办公室和多家族办公室两种类型，分别适用于不同的财富管理需求。SFO专门为单个超高净值家族提供服务，能够高度定制化地满足其复杂需求，例如量身打造投资策略、规划跨代传承等。根据美国SEC标准，通常要求最低资产管理规模达到1亿美元；而在香港，要享受相关税务优惠，则需满足年运营开支不低于200万港元，并配备至少两名全职员工的条件。这些要求既保障了服务的专属性，也有助于维护家族隐私。</p>
-                    <p id="sec2-para-2">多家族办公室汇集多个不同家族的资源，通过共享专业人才与资源网络来降低运营成本——这种模式尤其适合新兴的超高净值人士，通常要求合并管理资产规模超过2,000万美元。尽管该模式有助于促成跨行业合作和获取机构级别的投资机会，但在服务定制方面可能较为有限。  在香港，多家族办公室若取得证监会牌照，可享受“统一基金豁免”政策，并采用更简化的高净值投资者评估流程。目前，单一家族办公室与多家族办公室在香港发展蓬勃，已有超过2,700家单一家族办公室（其中约半数管理的资产超过5,000万美元），多家族办公室数量也在持续增长，而本地超高净值人士规模已达12,615人。</p>
+                    <p id="sec2-para-1">家族办公室主要分为单一家族办公室和多家族办公室两种类型，分别适用于不同的财富管理需求。单一家族办公室专门为单个超高净值家族提供服务，能够高度定制化地满足其复杂需求，例如量身打造投资策略、规划跨代传承等。根据美国SEC标准，通常要求最低资产管理规模达到1亿美元；而在香港，要享受相关税务优惠，则需满足年运营开支不低于200万港元，并配备至少两名全职员工的条件。这些要求既保障了服务的专属性，也有助于维护家族隐私。</p>
+                    <p id="sec2-para-2">多家族办公室汇集多个不同家族的资源，通过共享专业人才与资源网络来降低运营成本——这种模式尤其适合新兴的超高净值人士，通常要求合并管理资产规模超过两千万美元。尽管该模式有助于促成跨行业合作和获取机构级别的投资机会，但在服务定制方面可能较为有限。  在香港，多家族办公室若取得证监会牌照，可享受“统一基金豁免”政策，并采用更简化的高净值投资者评估流程。目前，单一家族办公室与多家族办公室在香港发展蓬勃，已有超过2700家单一家族办公室（其中约半数管理的资产超过5,000万美元），多家族办公室数量也在持续增长，而本地超高净值人士规模已达12,615人。</p>
                 </div>
             </div>
             
@@ -293,7 +293,7 @@
 
     <div class="future-card">
         <h4 id="future-title-3">创新生态</h4>
-        <p id="future-para-3">家办汇与彭博合作扩展：数字中心（浏览量超过4,000次）及年度工作坊（如2025年10月的故事分享会）。前海跨境运营支持香港办公室向内地扩展。</p>
+        <p id="future-para-3">家办汇与彭博合作扩展：数字中心（浏览量超过4000次）及年度工作坊（如2025年10月的故事分享会）。前海跨境运营支持香港办公室向内地扩展。</p>
     </div>
 
     <div class="future-card">
@@ -1017,8 +1017,8 @@ function toggleLanguage() {
             // Section 2 paragraphs
             const sec2Para1Zh = document.getElementById('sec2-para-1');
             const sec2Para2Zh = document.getElementById('sec2-para-2');
-            if (sec2Para1Zh) sec2Para1Zh.textContent = '家族办公室主要分为单一家族办公室和多家族办公室两种类型，分别适用于不同的财富管理需求。SFO专门为单个超高净值家族提供服务，能够高度定制化地满足其复杂需求，例如量身打造投资策略、规划跨代传承等。根据美国SEC标准，通常要求最低资产管理规模达到1亿美元；而在香港，要享受相关税务优惠，则需满足年运营开支不低于200万港元，并配备至少两名全职员工的条件。这些要求既保障了服务的专属性，也有助于维护家族隐私。';
-            if (sec2Para2Zh) sec2Para2Zh.textContent = '多家族办公室汇集多个不同家族的资源，通过共享专业人才与资源网络来降低运营成本——这种模式尤其适合新兴的超高净值人士，通常要求合并管理资产规模超过2,000万美元。尽管该模式有助于促成跨行业合作和获取机构级别的投资机会，但在服务定制方面可能较为有限。  在香港，多家族办公室若取得证监会牌照，可享受“统一基金豁免”政策，并采用更简化的高净值投资者评估流程。目前，单一家族办公室与多家族办公室在香港发展蓬勃，已有超过2,700家单一家族办公室（其中约半数管理的资产超过5,000万美元），多家族办公室数量也在持续增长，而本地超高净值人士规模已达12,615人。';
+            if (sec2Para1Zh) sec2Para1Zh.textContent = '家族办公室主要分为单一家族办公室和多家族办公室两种类型，分别适用于不同的财富管理需求。单一家族办公室专门为单个超高净值家族提供服务，能够高度定制化地满足其复杂需求，例如量身打造投资策略、规划跨代传承等。根据美国SEC标准，通常要求最低资产管理规模达到1亿美元；而在香港，要享受相关税务优惠，则需满足年运营开支不低于200万港元，并配备至少两名全职员工的条件。这些要求既保障了服务的专属性，也有助于维护家族隐私。';
+            if (sec2Para2Zh) sec2Para2Zh.textContent = '多家族办公室汇集多个不同家族的资源，通过共享专业人才与资源网络来降低运营成本——这种模式尤其适合新兴的超高净值人士，通常要求合并管理资产规模超过两千万美元。尽管该模式有助于促成跨行业合作和获取机构级别的投资机会，但在服务定制方面可能较为有限。  在香港，多家族办公室若取得证监会牌照，可享受“统一基金豁免”政策，并采用更简化的高净值投资者评估流程。目前，单一家族办公室与多家族办公室在香港发展蓬勃，已有超过2700家单一家族办公室（其中约半数管理的资产超过5,000万美元），多家族办公室数量也在持续增长，而本地超高净值人士规模已达12,615人。';
             
             // Table headers and content
             updateTableHeaders(true);
@@ -1092,7 +1092,7 @@ function getTimelineContent(itemNumber, isChinese) {
             false: '<p>The landmark March 2023 Policy Statement outlined eight measures to build a competitive ecosystem, including the Inland Revenue (Amendment) Ordinance 2023 for 0% profits tax on qualifying FIHVs (HK$240M+ AUM threshold). The New Capital Investment Entrant Scheme (CIES) relaunched in 2024 with a HK$30M investment threshold, attracting 340+ applications. InvestHK assisted 95 setups in 2024 alone (up from 26 in 2023), exceeding the 200-office target early. The Hong Kong Academy for Wealth Legacy (est. 2023) trained 3,100+ professionals, while SFC guidance clarified licensing exemptions for SFOs. Private wealth AUM from family offices reached HK$1.55 trillion by end-2024, a 76% rise since 2017.</p>'
         },
         '4': {
-            true: '<p>香港家办汇于2024年10月与彭博及财经事务及库务局合作推出，设有数字知识中心（浏览量超过4,000次）及《家族办公室指南》（预计2025年10月发布）——该指南全面涵盖监管导航、资产策略、传承规划及运营管理。2025-26年度财政预算案将税务豁免范围扩大至碳排放权、数字资产及附带权益，目标是在2028年前吸引220间新办公室。大湾区一体化实现了人民币的无缝流动，绿色金融及ESG倡议与全球趋势相契合（92%的中国高净值人士持有收藏品）。预计单一家族办公室数量将从2,700间增至3,000间，香港目标在2027年前超越瑞士，成为全球顶尖的跨境财富中心，管理超过35万亿港元的资产管理规模。</p>',
+            true: '<p>香港家办汇于2024年10月与彭博及财经事务及库务局合作推出，设有数字知识中心（浏览量超过4000次）及《家族办公室指南》（预计2025年10月发布）——该指南全面涵盖监管导航、资产策略、传承规划及运营管理。2025-26年度财政预算案将税务豁免范围扩大至碳排放权、数字资产及附带权益，目标是在2028年前吸引220间新办公室。大湾区一体化实现了人民币的无缝流动，绿色金融及ESG倡议与全球趋势相契合（92%的中国高净值人士持有收藏品）。预计单一家族办公室数量将从2700间增至3000间，香港目标在2027年前超越瑞士，成为全球顶尖的跨境财富中心，管理超过35万亿港元的资产管理规模。</p>',
             false: '<p>The Hong Kong Family Office Nexus launched in October 2024 with Bloomberg and FSTB, featuring a digital knowledge hub (4,000+ views) and The Family Office Playbook (October 2025 release)—a comprehensive guide on regulatory navigation, asset strategies, succession, and operations. The 2025-26 Budget expands tax exemptions to carbon credits, digital assets, and carried interest, targeting 220 more offices by 2028. Greater Bay Area integration enables seamless RMB flows, while green finance and ESG initiatives align with global trends (92% Chinese HNWI in collectibles). With 2,700+ SFOs projected to reach 3,000+, Hong Kong aims to surpass Switzerland as the world\'s top cross-border wealth center by 2027, managing HK$35T+ AUM.</p>'
         }
     };
@@ -1172,7 +1172,7 @@ function updateFutureSection(isChinese) {
         true: [ // Chinese
             ['政策动力', '2025-26年度预算案优化了新兴资产（数字、绿色）的税务制度。新资本投资者入境计划（CIES）于2025年3月增强，将投资链接至ESFO管理公司，推动了340多宗申请。目标：到2028年吸引220间新办公室，维持7.6%的年财富增长率。'],
             ['可持续整合', 'ESG及绿色金融领先：扩展碳/可再生能源豁免，契合全球趋势。学院课程培训下一代影响力投资和慈善领袖（iLink平台连接捐赠者与公共艺术/项目）。'],
-            ['创新生态', '家办汇与彭博合作扩展：数字中心（浏览量超过4,000次）及年度工作坊（如2025年10月的故事分享会）。前海跨境运营支持香港办公室向内地扩展。'],
+            ['创新生态', '家办汇与彭博合作扩展：数字中心（浏览量超过4000次）及年度工作坊（如2025年10月的故事分享会）。前海跨境运营支持香港办公室向内地扩展。'],
             ['全球连通性', '定期举办的「裕泽香江」高峰论坛促进东西方网络建设。FamilyOfficeHK在北京、迪拜等地设立办公室，针对来源市场。预测：到2027年超越瑞士成为第一跨境财富中心（资产管理规模超过35万亿港元）。']
         ],
         false: [ // English
