Update Chinese text for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <p>The landmark March 2023 Policy Statement outlined eight measures to build a competitive ecosystem, including the Inland Revenue (Amendment) Ordinance 2023 for 0% profits tax on qualifying FIHVs (HK$240M+ AUM threshold). The New Capital Investment Entrant Scheme (CIES) relaunched in 2024 with a HK$30M investment threshold, attracting 340+ applications. InvestHK assisted 95 setups in 2024 alone (up from 26 in 2023), exceeding the 200-office target early. The Hong Kong Academy for Wealth Legacy (est. 2023) trained 3,100+ professionals, while SFC guidance clarified licensing exemptions for SFOs. Private wealth AUM from family offices reached HK$1.55 trillion by end-2024, a 76% rise since 2017.</p>
                             </div>
                             <div class="language-panel chinese-panel clean" data-lang="中文" id="timeline-content-3-zh" style="padding: 1rem;">
-                                <p>2023年3月发布的《政策宣言》概述了八项措施，以构建具有竞争力的生态系统，其中包括《2023年税务（修订）条例》，为合资格的家族投资控股实体（FIHV）提供0%利得税（资产管理规模门槛为2.4亿港元以上）。新资本投资者入境计划（CIES）于2024年重启，投资门槛为3,000万港元，已吸引超过340宗申请。投资推广署在2024年协助设立了95间办公室（2023年为26间），提前超越了200间的目标。香港财富传承学院（2023年成立）已培训超过3,100名专业人士，而证监会的指引也明确了单一家族办公室的牌照豁免。截至2024年底，家族办公室管理的私人财富AUM达到1.55万亿港元，自2017年以来增长76%。</p>
+                                <p>2023年3月发布的《政策宣言》概述了八项措施，以构建具有竞争力的生态系统，其中包括《2023年税务（修订）条例》，为合资格的家族投资控股实体提供0%利得税（资产管理规模门槛为2.4亿港元以上）。新资本投资者入境计划（CIES）于2024年重启，投资门槛为3,000万港元，已吸引超过340宗申请。投资推广署在2024年协助设立了95间办公室（2023年为26间），提前超越了200间的目标。香港财富传承学院（2023年成立）已培训超过3,100名专业人士，而证监会的指引也明确了单一家族办公室的牌照豁免。截至2024年底，家族办公室管理的私人财富AUM达到1.55万亿港元，自2017年以来增长76%。</p>
                             </div>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
 <tbody>
     <tr>
         <td id="table-row-1-col1">税务效率</td>
-        <td id="table-row-1-col2">合资格的家族投资控股实体（FIHV）在证券、期货及附带收入（不超过5%门槛）上享受0%利得税。2025年扩展制度涵盖数字资产、碳排放权及附带权益。</td>
+        <td id="table-row-1-col2">合资格的家族投资控股实体在证券、期货及附带收入（不超过5%门槛）上享受0%利得税。2025年扩展制度涵盖数字资产、碳排放权及附带权益。</td>
     </tr>
     <tr>
         <td id="table-row-2-col1">监管清晰度</td>
@@ -265,7 +265,7 @@
     </tr>
     <tr>
         <td id="table-row-5-col1">慈善及ESG</td>
-        <td id="table-row-5-col2">家族投资控股实体（FIHV）扩大慈善利益。私人银行协会聚焦绿色投资；92%中国高净值人士的收藏品支持艺术/慈善生态。</td>
+        <td id="table-row-5-col2">家族投资控股实体扩大慈善利益。私人银行协会聚焦绿色投资；92%中国高净值人士的收藏品支持艺术/慈善生态。</td>
     </tr>
 </tbody>
                         </tr>
@@ -1088,7 +1088,7 @@ function getTimelineContent(itemNumber, isChinese) {
             false: '<p>The Hong Kong Monetary Authority (HKMA) identified family offices as a strategic growth sector amid regional competition from Singapore. InvestHK launched the "Family Office Hub" campaign, positioning Hong Kong as Asia\'s wealth management center. Key developments included the 2020 introduction of tax concessions for funds and the 2022 Policy Address targeting 200+ family office setups by 2025. The FamilyOfficeHK team was established in June 2021, handling 46 inquiries that year and building a service provider network for one-stop support.</p>'
         },
         '3': {
-            true: '<p>2023年3月发布的《政策宣言》概述了八项措施，以构建具有竞争力的生态系统，其中包括《2023年税务（修订）条例》，为合资格的家族投资控股实体（FIHV）提供0%利得税（资产管理规模门槛为2.4亿港元以上）。新资本投资者入境计划（CIES）于2024年重启，投资门槛为3,000万港元，已吸引超过340宗申请。投资推广署在2024年协助设立了95间办公室（2023年为26间），提前超越了200间的目标。香港财富传承学院（2023年成立）已培训超过3,100名专业人士，而证监会的指引也明确了单一家族办公室的牌照豁免。截至2024年底，家族办公室管理的私人财富AUM达到1.55万亿港元，自2017年以来增长76%。</p>',
+            true: '<p>2023年3月发布的《政策宣言》概述了八项措施，以构建具有竞争力的生态系统，其中包括《2023年税务（修订）条例》，为合资格的家族投资控股实体提供0%利得税（资产管理规模门槛为2.4亿港元以上）。新资本投资者入境计划（CIES）于2024年重启，投资门槛为3,000万港元，已吸引超过340宗申请。投资推广署在2024年协助设立了95间办公室（2023年为26间），提前超越了200间的目标。香港财富传承学院（2023年成立）已培训超过3,100名专业人士，而证监会的指引也明确了单一家族办公室的牌照豁免。截至2024年底，家族办公室管理的私人财富AUM达到1.55万亿港元，自2017年以来增长76%。</p>',
             false: '<p>The landmark March 2023 Policy Statement outlined eight measures to build a competitive ecosystem, including the Inland Revenue (Amendment) Ordinance 2023 for 0% profits tax on qualifying FIHVs (HK$240M+ AUM threshold). The New Capital Investment Entrant Scheme (CIES) relaunched in 2024 with a HK$30M investment threshold, attracting 340+ applications. InvestHK assisted 95 setups in 2024 alone (up from 26 in 2023), exceeding the 200-office target early. The Hong Kong Academy for Wealth Legacy (est. 2023) trained 3,100+ professionals, while SFC guidance clarified licensing exemptions for SFOs. Private wealth AUM from family offices reached HK$1.55 trillion by end-2024, a 76% rise since 2017.</p>'
         },
         '4': {
@@ -1143,11 +1143,11 @@ function updateTableHeaders(isChinese) {
 function updateTableContent(isChinese) {
     const tableContent = {
         true: [ // Chinese
-            ['税务效率', '合资格的家族投资控股实体（FIHV）在证券、期货及附带收入（不超过5%门槛）上享受0%利得税。2025年扩展制度涵盖数字资产、碳排放权及附带权益。'],
+            ['税务效率', '合资格的家族投资控股实体在证券、期货及附带收入（不超过5%门槛）上享受0%利得税。2025年扩展制度涵盖数字资产、碳排放权及附带权益。'],
             ['监管清晰度', '证监会2023年《快速参考指南》豁免纯单一家族办公室的第九类牌照。简化高净值客户适宜性评估，确保合规且无负担。'],
             ['跨境接达', '大湾区实现人民币无缝流动。前海30项金融措施支持专门机构，连接中国316万高净值人士市场。'],
             ['人才发展', '香港财富传承学院（自2023年起已培训3100多人）提供传承规划、慈善课程。人才名单为财富管理专家提供快速通道。'],
-            ['慈善及ESG', '家族投资控股实体（FIHV）扩大慈善利益。私人银行协会聚焦绿色投资；92%中国高净值人士的收藏品支持艺术/慈善生态。']
+            ['慈善及ESG', '家族投资控股实体扩大慈善利益。私人银行协会聚焦绿色投资；92%中国高净值人士的收藏品支持艺术/慈善生态。']
         ],
         false: [ // English
             ['Tax Efficiency', '0% profits tax for FIHVs on securities, futures, and incidental income (≤5% threshold). Expanded 2025 regime covers digital assets, carbon credits, and carried interest.'],
